--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="raw.githubusercontent.com/pratistha02/Qr-Code-Component/main/favicon-32x32.png">
 
   <title>Frontend Mentor | Product preview card component</title>
    <link rel="stylesheet" href="styles.css">
@@ -15,8 +15,8 @@
 
     <article>
       <picture>
-        <source media="(min-width: 640px)" srcset="./images/image-product-desktop.jpg">
-        <img src="./images/image-product-mobile.jpg" alt="">
+        <source media="(min-width: 640px)" srcset="https://raw.githubusercontent.com/pratistha02/Product-Preview-Component/main/image-product-desktop.jpg">
+        <img src="https://raw.githubusercontent.com/pratistha02/Product-Preview-Component/main/image-product-mobile.jpg" alt="">
       </picture>
     </article>
 
@@ -40,7 +40,7 @@
       </ul>
 
       <button class="btn">
-        <img src="./images/icon-cart.svg" alt="">Add to Cart
+        <img src="raw.githubusercontent.com/pratistha02/Product-Preview-Component/86b6e823076df411925b714e7a5ff2f7433c90bc/icon-cart.svg" alt="">Add to Cart
       </button>
     </article>
   </div>
